add schedule endpoint & teacher attendance fix
